--- a/deodorant.html
+++ b/deodorant.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://use.typekit.net/juj1gel.css">
+    <meta name="keywords"
+        content="Divine Spice, Body, Hair, Deodorants, Body care, Hair care, Shampoo, Gel, Hair shampoo, Body gel, ">
+
+    <meta name="description" content="Divine Spice- hair and body care products">
 </head>
 
 <body>
-    <!--<img src="images/2.svg" alt="background" class="background-img">-->
     <!--Navigation-->
     <div class="wrapper">
         <nav>
@@ -22,7 +25,7 @@
             <div class="content">
                 <div class="logo"><a href="index.html">Divine Spice</a></div>
                 <ul class="links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="desktop-link-1">Home</a></li>
                     <li>
                         <a href="#" class="desktop-link">Products</a>
                         <input type="checkbox" id="show-products">
@@ -37,17 +40,17 @@
                             <li><a href="#">Gift ideas</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://oldspice.com/">Men</a></li>
+                    <li><a href="https://oldspice.com/" class="desktop-link-1">Men</a></li>
                     <li>
                         <a href="#" class="desktop-link">Campaigns</a>
                         <input type="checkbox" id="show-campaigns">
                         <label for="show-campaigns">Campaigns</label>
                         <ul class="roll-out-nav">
-                            <li><a href="#">Female body hair</a></li>
+                            <li><a href="campaign.html">Female body hair</a></li>
                             <li><a href="#">Female self-esteem</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">MyDivineSpice</a></li>
+                    <li><a href="#" class="desktop-link-1">MyDivineSpice</a></li>
                     <li>
                         <a href="#" class="desktop-link">About us</a>
                         <input type="checkbox" id="show-about-us">
@@ -57,11 +60,7 @@
                                 <a href="#" class="desktop-link">Divine Spice</a>
                                 <input type="checkbox" id="show-divine-spice">
                                 <label for="show-divine-spice">Divine Spice</label>
-                                <ul>
-                                    <li><a href="#">Sub Menu 1</a></li>
-                                    <li><a href="#">Sub Menu 2</a></li>
-                                    <li><a href="#">Sub Menu 3</a></li>
-                                </ul>
+
                             </li>
                             <li><a href="#">Sustainability</a></li>
                             <li><a href="#">History</a></li>
@@ -77,6 +76,7 @@
             </form>
         </nav>
     </div>
+    <!--Heading-->
 
     <div class="deodorant-heading">
         <h1>Deodorants</h1>
@@ -90,157 +90,189 @@
             </article>
         </div>
     </article>
-
+    <!--Product boxes-->
     <section class="card-flex">
         <div class="card-grid">
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/old-spice-product.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Magnetic Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <a href="deodorant-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
+                    <a href="deodorant-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
+                    <img src="images/old-spice-product2.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Refreshing Deodorant</p>
                     <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
+                    <img src="images/old-spice-product3.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Goddess Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
+                    <img src="images/old-spice-product3.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Hers Deodorant</p>
                     <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/old-spice-product.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Relaxing Deodorant</p>
                     <p class="price-title">21DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
+                    <img src="images/old-spice-product2.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Pure Deodorant</p>
                     <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
+                    <img src="images/old-spice-product2.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Vibrant Deodorant</p>
                     <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/old-spice-product.png" alt="product">
                 </div>
                 <div class="card-bottom">
-                    <h4></h4>
+
                     <p class="shampoo-title">Strong Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
+                    <img src="images/old-spice-product3.png" alt="product">
                 </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Spicy Deodorant</p>
-                    <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
+
+                <p class="shampoo-title">Spicy Deodorant</p>
+                <p class="price-title">19DKK</p>
+                <button type="button" class="shampoo-button">VIEW</button>
+                <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+          </div>
             </div>
         </div>
     </section>
-
+    <!--Footer-->
     <footer>
         <div>
-            <h5 class="footer-logo">Divine Spice</h5>
+            <a href="index.html">
+                <h5 class="footer-logo">Divine Spice</h5>
+            </a>
         </div>
         <div class="footer-box">
 
             <div>
                 <h5>PRODUCTS</h5>
-                <p>Hair</p>
-                <p>Body</p>
-                <p>Deodorants</p>
-                <p>Bestsellers</p>
+                <a href="hair.html">
+                    <p>Hair</p>
+                </a>
+                <a href="body.html">
+                    <p>Body</p>
+                </a>
+                <a href="deodorant.html">
+                    <p>Deodorants</p>
+                </a>
+                <a href="#">
+                    <p>Bestsellers</p>
+                </a>
             </div>
 
             <div>
                 <h5>ABOUT US</h5>
-                <p>History</p>
-                <p>Purpose</p>
-                <p>News</p>
-                <p>Sustainability</p>
+                <a href="#">
+                    <p>History</p>
+                    <p>Purpose</p>
+                    <p>News</p>
+                    <p>Sustainability</p>
+                </a>
             </div>
 
             <div class="support">
                 <h5>SUPPORT</h5>
-                <p>Privacy Policy</p>
-                <p>Conditions</p>
-                <p>Help Centre</p>
-                <p>Contact Us</p>
+                <a href="#">
+                    <p>Privacy Policy</p>
+                    <p>Conditions</p>
+                    <p>Help Centre</p>
+                    <p>Contact Us</p>
+                </a>
             </div>
 
         </div>
         <div class="social-media-footer">
             <h5>FOLLOW US ON SOCIAL MEDIA</h5>
             <div>
-                <img src="images/facebook.png" alt="">
-                <img src="images/instagram.png" alt="">
-                <img src="images/twitter.png" alt="" class="twitter">
-                <img src="images/youtube.png" alt="">
+                <a href="#">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/instagram.png" alt="">
+                    <img src="images/twitter.png" alt="" class="twitter">
+                    <img src="images/youtube.png" alt="">
+                </a>
             </div>
         </div>
     </footer>
